--- a/templates/email-compose.phtml
+++ b/templates/email-compose.phtml
@@ -27,6 +27,8 @@
 
     <link href="<?=Helper::url('/media/css/dashboard.css')?>" rel="stylesheet" />
 
+	<script src="<?=Helper::url('/media/js/global.js')?>"></script>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
