--- a/templates/alumni-import.phtml
+++ b/templates/alumni-import.phtml
@@ -26,6 +26,8 @@
     
     <script src="<?=Helper::url('/media/js/import.js')?>" rel="stylesheet"></script>
 
+	<script src="<?=Helper::url('/media/js/global.js')?>"></script>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
