--- a/templates/email.phtml
+++ b/templates/email.phtml
@@ -43,6 +43,14 @@
 		} );
     </script>
     
+	<?php if (isset($_GET['success'])): ?>
+	<script>
+		$(document).ready(function () {
+			$("#success_modal").modal("show");
+		});
+	</script>
+	<?php endif;?>
+
   </head>
 
   <body>
@@ -93,5 +101,17 @@
       </div>
     </div>
     
+	<div class="modal fade" tabindex="-1" role="dialog" id="success_modal">
+	  <div class="modal-dialog" role="document">
+		<div class="modal-content panel-success">
+		  <div class="modal-header panel-heading">
+		    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		    <h4 class="modal-title">Success</h4>
+		  </div>
+			
+		</div><!-- /.modal-content -->
+	  </div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
+
   </body>
 </html>
