--- a/templates/alumni-create.phtml
+++ b/templates/alumni-create.phtml
@@ -127,7 +127,7 @@
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Zipcode *</label>
-								<input type="text" class="form-control" id="zipcode" name="zipcode"/>
+								<input type="text" class="form-control" id="zipcode" name="zipcode" pattern="[0-9]{5}" title="5 digit zipcode"/>
 							</div>
 							<div class="form-group col-lg-6">
 								<label>Home Number</label>
