--- a/templates/email-compose.phtml
+++ b/templates/email-compose.phtml
@@ -62,7 +62,11 @@
 			<div class="col-lg-12">
 				<form action="<?=Helper::url('/email')?>" method="POST">
 					<div class="form-group">
-						<input type="text" name="to" class="form-control" placeholder="To" />
+						<input type="text" name="to" class="form-control" placeholder="To" 
+						<?php if (isset($_GET['to'])): ?>
+							value="<?=$_GET['to']?>"
+						<?php endif; ?>
+						/>
 					</div>
 					<div class="form-group">
 						<input type="text" name="subject" class="form-control" placeholder="Subject" />
